@@ -1,5 +1,6 @@
 == master
 
+* Fix DataMapper 1.0.1+ tests producing warnings
 * Fix validation error warnings in ActiveModel / ActiveRecord 3.0.0 beta5+
 * Fix mass-assignment sanitization breaking in ActiveRecord 3.0.0 beta5+ [Akira Matsuda]
 
